very minor rendering fixes for firefox 2/3 and seamonkey 1.x (images no longer overflow in width and have to be scrolled when viewing at very narrow resolutions like 640x480).

--- a/style_dark.css
+++ b/style_dark.css
@@ -135,7 +135,7 @@ h3 {
 .postarea img {
   margin:           0 auto;
   display:          inline-block;
-  max-width: 100%;
+  max-width: 98%;
   box-shadow: 5px 5px 4px 0px #1E2530;
   margin-bottom: 9px;
 }
@@ -143,7 +143,7 @@ h3 {
 .postarea img.fitwide {
   margin:           0 auto;
   display:          block;
-  max-width:        100%;
+  max-width:        98%;
   max-height:       100%;
   height:           auto;
   width:            100%;
@@ -175,7 +175,7 @@ alert, .alert, .caption, imgcentercaption, .imgcentercaption {
    render it properly. Setting class caption on imgcentercaption does nothing.
    this is probably what I deserve for using non-standard tags, honestly. */
 imgcentercaption, .imgcentercaption, .caption {
-  max-width: 100%;
+  max-width: 98%;
   text-align: center;
 }
 
